[gd_scene load_steps=2 format=3 uid="uid://bv8dkjaf6yr17"]

[ext_resource type="Script" path="res://players/player_group.gd" id="1_2sfnr"]

[node name="PlayerGroup" type="Node2D"]
script = ExtResource("1_2sfnr")

[node name="SlotOneLocation" type="Marker2D" parent="."]

[node name="SlotTwoLocation" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="SlotThreeLocation" type="Marker2D" parent="."]
position = Vector2(64, 0)

[node name="SlotFourLocation" type="Marker2D" parent="."]
position = Vector2(96, 0)
